--- a/package.json
+++ b/package.json
@@ -35,14 +35,16 @@
 		"svelte": "^5.0.0",
 		"svelte-sonner": "^0.3.28",
 		"tailwind-merge": "^3.0.2",
-		"tailwind-variants": "^0.3.1",
+		"tailwind-variants": "^0.2.1",
 		"tailwindcss": "^3.4.17",
 		"tailwindcss-animate": "^1.0.7",
+		"vaul-svelte": "^1.0.0-next.7",
 		"vite": "^6.0.0",
 		"vite-plugin-pwa": "^1.0.1",
 		"workbox-window": "^7.3.0"
 	},
 	"dependencies": {
+		"@lucide/svelte": "^0.548.0",
 		"highlight.js": "^11.11.1",
 		"prismjs": "^1.29.0",
 		"q5": "^3.5.2",
