--- a/package.json
+++ b/package.json
@@ -1,54 +1,55 @@
 {
-	"name": "my-app",
-	"private": true,
-	"version": "0.0.1",
-	"type": "module",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''",
-		"format": "prettier --write .",
-		"lint": "prettier --check . && eslint ."
-	},
-	"devDependencies": {
-		"@eslint/compat": "^1.2.5",
-		"@eslint/js": "^9.18.0",
-		"@sveltejs/adapter-node": "^5.2.11",
-		"@sveltejs/kit": "^2.16.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
-		"@tailwindcss/container-queries": "^0.1.1",
-		"@tailwindcss/forms": "^0.5.10",
-		"@tailwindcss/typography": "^0.5.16",
-		"autoprefixer": "^10.4.20",
-		"bits-ui": "^1.8.0",
-		"clsx": "^2.1.1",
-		"eslint": "^9.18.0",
-		"eslint-config-prettier": "^10.0.1",
-		"eslint-plugin-svelte": "^2.46.1",
-		"globals": "^15.14.0",
-		"lucide-svelte": "^0.477.0",
-		"mode-watcher": "^0.5.1",
-		"prettier": "^3.4.2",
-		"prettier-plugin-svelte": "^3.3.3",
-		"prettier-plugin-tailwindcss": "^0.6.10",
-		"svelte": "^5.0.0",
-		"svelte-sonner": "^0.3.28",
-		"tailwind-merge": "^3.0.2",
-		"tailwind-variants": "^0.2.1",
-		"tailwindcss": "^3.4.17",
-		"tailwindcss-animate": "^1.0.7",
-		"vaul-svelte": "^1.0.0-next.7",
-		"vite": "^6.0.0",
-		"vite-plugin-pwa": "^1.0.1",
-		"workbox-window": "^7.3.0"
-	},
-	"dependencies": {
-		"@lucide/svelte": "^0.548.0",
-		"highlight.js": "^11.11.1",
-		"prismjs": "^1.29.0",
-		"q5": "^3.5.2",
-		"svelte-highlight": "^7.8.2",
-		"three": "^0.178.0"
-	}
+  "name": "my-app",
+  "private": true,
+  "version": "0.0.1",
+  "type": "module",
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "prepare": "svelte-kit sync || echo ''",
+    "format": "prettier --write .",
+    "lint": "prettier --check . && eslint ."
+  },
+  "devDependencies": {
+    "@eslint/compat": "^1.2.5",
+    "@eslint/js": "^9.18.0",
+    "@sveltejs/kit": "^2.48.4",
+    "@sveltejs/vite-plugin-svelte": "^5.0.0",
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "autoprefixer": "^10.4.20",
+    "bits-ui": "^1.8.0",
+    "clsx": "^2.1.1",
+    "eslint": "^9.18.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-svelte": "^2.46.1",
+    "globals": "^15.14.0",
+    "lucide-svelte": "^0.477.0",
+    "mode-watcher": "^0.5.1",
+    "prettier": "^3.4.2",
+    "prettier-plugin-svelte": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.10",
+    "svelte": "^5.43.2",
+    "svelte-sonner": "^0.3.28",
+    "tailwind-merge": "^3.0.2",
+    "tailwind-variants": "^0.2.1",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
+    "vaul-svelte": "^1.0.0-next.7",
+    "vite": "^6.0.0",
+    "vite-plugin-pwa": "^1.0.1",
+    "workbox-window": "^7.3.0"
+  },
+  "dependencies": {
+    "@lucide/svelte": "^0.548.0",
+    "@sveltejs/adapter-static": "^3.0.10",
+    "fast-sort": "^1.2.6",
+    "highlight.js": "^11.11.1",
+    "prismjs": "^1.29.0",
+    "q5": "^3.5.2",
+    "svelte-highlight": "^7.8.2",
+    "three": "^0.178.0"
+  }
 }
