--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.12.4",
 		"globals": "^16.4.0",
+		"mode-watcher": "^1.1.0",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.7.1",
 		"svelte": "^5.41.0",
+		"svelte-sonner": "^1.0.5",
 		"tailwind-merge": "^3.3.1",
 		"tailwind-variants": "^3.1.1",
 		"tailwindcss": "^4.1.14",
@@ -41,6 +43,7 @@
 		"vite": "^7.1.10"
 	},
 	"dependencies": {
+		"highlight.js": "^11.11.1",
 		"three": "^0.180.0"
 	}
 }
