--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "CardanoThings-Web",
 	"private": true,
-	"version": "0.1.0",
+	"version": "0.2.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
@@ -45,6 +45,7 @@
 	"dependencies": {
 		"fast-sort": "^3.4.1",
 		"highlight.js": "^11.11.1",
+		"lucide-svelte": "^0.552.0",
 		"three": "^0.180.0"
 	}
 }
