--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"fast-sort": "^3.4.1",
 		"highlight.js": "^11.11.1",
 		"lucide-svelte": "^0.552.0",
+		"svelte-carousel": "^1.0.25",
 		"three": "^0.180.0"
 	}
 }
